clean up registry loader and validator. cleaned up docker files for worker and api. Added a export plot feature to the streamlit app
